fix: submit button value

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <br />
                     <input type="text" id="CNPJ" placeholder="CNPJ" />
                     <br />
-                    <input type="submit" id="ENVIAR" placeholder="ENVIAR" />
+                    <input type="submit" id="ENVIAR" placeholder="ENVIAR" value="Enviar" />
                 </form>
                 <div id="snackbar"></div>
             </div>
