feat: lgdp e background no-repeat

--- a/index.html
+++ b/index.html
@@ -104,6 +104,11 @@
                     <div class="form-input-field">
                         <input type="text" id="CNPJ" placeholder="CNPJ" />
                     </div>
+                    <div class="form-input-LGPD">
+                        <input class="LGPD-checkbox" type="checkbox" id="LGPD" checked disabled />
+                        <span class="LGPD-checkbox">Ao fazer o cadastro autorizo o recebimento
+                            de comunicações e novidades do grupo Facrisa</span>
+                    </div>
                     <input type="submit" id="ENVIAR" placeholder="ENVIAR" value="Enviar" />
                 </form>
                 <div id="snackbar"></div>
