feat: add footer

--- a/index.html
+++ b/index.html
@@ -126,29 +126,44 @@
         </div>
         <div class="dobra-dois">
             <h1>INDÚSTRIA BRASILEIRA | COMPRE DIRETO DA FÁBRICA</h1>
-
-            <div class="imagens-dobra-dois">
-                <div class="dobra-dois-imagem1"></div>
-                <div class="dobra-dois-imagem2"></div>
-                <div class="dobra-dois-imagem3"></div>
+            <div class="dobra-dois-conteudo">
+                <div class="imagens-dobra-dois">
+                    <div class="dobra-dois-imagem1"></div>
+                    <div class="dobra-dois-imagem2"></div>
+                    <div class="dobra-dois-imagem3"></div>
+                </div>
+                <div class="lista-dobra-dois">
+                    <ul>
+                        <li><span>Alta margem de lucro</span></li>
+                        <li><span>Garantia em todas as peças</span></li>
+                        <li><span>Designs exclusivos</span></li>
+                        <li><span>Controle de qualidade</span></li>
+                        <li><span>Negociação facilitada</span></li>
+                        <li><span>Representantes em todo país</span></li>
+                        <li><span>Semijoias para todos os públicos</span></li>
+                    </ul>
+                </div>
             </div>
-            <div class="lista-dobra-dois">
-                <ul>
-                    <li><span>Alta margem de lucro</span></li>
-                    <li><span>Garantia em todas as peças</span></li>
-                    <li><span>Designs exclusivos</span></li>
-                    <li><span>Controle de qualidade</span></li>
-                    <li><span>Negociação facilitada</span></li>
-                    <li><span>Representantes em todo país</span></li>
-                    <li><span>Semijoias para todos os públicos</span></li>
-                </ul>
+            <div class="dobra-dois-conteudo">
+                <input type="button" value="QUERO REVENDER" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">
             </div>
-
         </div>
 
         <div id="anel-flutuante"></div>
+        <footer>
+            <span>saiba mais</span>
+            <div class="logos-footer">
+                <a href="https://bellaagner.com.br/ " target="_blank">
+                    <div id="logo-bella-agner-footer">
+                    </div>
+                </a><a href="https://facrisa.com.br/" target="_blank">
+                    <div id="logo-facrisa-footer">
+                    </div>
+                </a>
+            </div>
+            </div>
+        </footer>
     </body>
-
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.2.0/vanilla-masker.min.js"></script>
     <script type="text/javascript" src="function.js"></script>
