feat: dobra 1 mobile

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                         <span class="texto-card">Qualidade, durabilidade e sofisticação<br /> com <b>alta margem de
                                 lucro.</b>
                         </span>
+                        <span class="texto-card-sub">Faça seu cadastro e saiba mais
+                        </span>
                     </div>
                 </div>
                 <div class="div-form">
