--- a/index.html
+++ b/index.html
@@ -42,6 +42,86 @@
                         </span>
                     </div>
                 </div>
+                <div class="div-form-mobile">
+                    <h3>Faça seu cadastro</h3>
+                    <form id="form-facrisa">
+                        <div class="form-input-field">
+                            <input type="text" id="NOME" placeholder="NOME" />
+                        </div>
+                        <div class="form-input-field">
+                            <input type="text" id="EMAIL" placeholder="EMAIL" />
+                        </div>
+                        <div class="form-input-field">
+                            <input type="text" id="TELEFONE" placeholder="TELEFONE" />
+                        </div>
+                        <div class="form-input-field">
+                            <input type="text" id="CEP" placeholder="CEP" onfocusout="buscaCep()" onblur="buscaCep()" />
+                        </div>
+                        <div class="form-input-endereco">
+                            <div class="form-input-field">
+                                <input type="text" id="ENDERECO" placeholder="ENDERECO" />
+                            </div>
+                            <div class="form-input-field">
+                                <input type="text" id="NUMERO" placeholder="NUMERO" />
+                            </div>
+                            <div class="form-input-field">
+                                <input type="text" id="COMPLEMENTO" placeholder="COMPLEMENTO" />
+                            </div>
+                            <div class="form-input-field">
+                                <input type="text" id="BAIRRO" placeholder="BAIRRO" />
+                            </div>
+                            <div class="form-input-field">
+                                <input type="text" id="CIDADE" placeholder="CIDADE" />
+                            </div>
+                            <div class="form-input-field">
+                                <div class="select">
+                                    <select id="ESTADO" name="ESTADO">
+                                        <option disabled selected value hidden>UF</option>
+                                        <option value="AC">Acre</option>
+                                        <option value="AL">Alagoas</option>
+                                        <option value="AP">Amapá</option>
+                                        <option value="AM">Amazonas</option>
+                                        <option value="BA">Bahia</option>
+                                        <option value="CE">Ceará</option>
+                                        <option value="DF">Distrito Federal</option>
+                                        <option value="ES">Espírito Santo</option>
+                                        <option value="GO">Goiás</option>
+                                        <option value="MA">Maranhão</option>
+                                        <option value="MT">Mato Grosso</option>
+                                        <option value="MS">Mato Grosso do Sul</option>
+                                        <option value="MG">Minas Gerais</option>
+                                        <option value="PA">Pará</option>
+                                        <option value="PB">Paraíba</option>
+                                        <option value="PR">Paraná</option>
+                                        <option value="PE">Pernambuco</option>
+                                        <option value="PI">Piauí</option>
+                                        <option value="RJ">Rio de Janeiro</option>
+                                        <option value="RN">Rio Grande do Norte</option>
+                                        <option value="RS">Rio Grande do Sul</option>
+                                        <option value="RO">Rondônia</option>
+                                        <option value="RR">Roraima</option>
+                                        <option value="SC">Santa Catarina</option>
+                                        <option value="SP">São Paulo</option>
+                                        <option value="SE">Sergipe</option>
+                                        <option value="TO">Tocantins</option>
+                                        <option value="EX">Estrangeiro</option>
+                                    </select>
+                                    <span class="focus"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-input-field">
+                            <input type="text" id="CNPJ" placeholder="CNPJ" />
+                        </div>
+                        <div class="form-input-LGPD">
+                            <input class="LGPD-checkbox" type="checkbox" id="LGPD" checked disabled />
+                            <span class="LGPD-checkbox">Ao fazer o cadastro autorizo o recebimento
+                                de comunicações e novidades do grupo Facrisa</span>
+                        </div>
+                        <input type="submit" id="ENVIAR" placeholder="ENVIAR" value="Enviar" />
+                    </form>
+                    <div id="snackbar"></div>
+                </div>
                 <div class="div-form">
                     <h3>Faça seu cadastro</h3>
                     <form id="form-facrisa">
