fix: color placeholder form mobile

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="div-form-mobile">
                     <h3>Faça seu cadastro</h3>
-                    <form id="form-facrisa">
+                    <form id="form-facrisa-mobile">
                         <div class="form-input-field">
                             <input type="text" id="NOME" placeholder="NOME" />
                         </div>
