--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                             <input type="tel" id="TELEFONE_MOBILE" placeholder="TELEFONE" />
                         </div>
                         <div class="form-input-field">
-                            <input type="text" id="CEP_MOBILE" placeholder="CEP" onfocusout="buscaCep()"
-                                onblur="buscaCep()" />
+                            <input type="text" id="CEP_MOBILE" placeholder="CEP" onfocusout="buscaCep(true)"
+                                onblur="buscaCep(true)" />
                         </div>
                         <div class="form-input-endereco">
                             <div class="form-input-field">
