--- a/index.html
+++ b/index.html
@@ -236,11 +236,12 @@
             <div class="dobra-dois-conteudo">
                 <input type="button" value="QUERO REVENDER" onclick="window.scrollTo({ top: 0, behavior: 'smooth' });">
             </div>
-        </div>
 
+            <div class="footer-span-mobile"><span>saiba mais</span></div>
+        </div>
         <div id="anel-flutuante"></div>
         <footer>
-            <span>saiba mais</span>
+            <span class="footer-span">saiba mais</span>
             <div class="logos-footer">
                 <a href="https://bellaagner.com.br/ " target="_blank">
                     <div id="logo-bella-agner-footer">
