fix: cep number (mobile)

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <input type="tel" id="TELEFONE_MOBILE" placeholder="TELEFONE" />
                         </div>
                         <div class="form-input-field">
-                            <input type="text" id="CEP_MOBILE" placeholder="CEP" onfocusout="buscaCep(true)"
+                            <input type="number" id="CEP_MOBILE" placeholder="CEP" onfocusout="buscaCep(true)"
                                 onblur="buscaCep(true)" />
                         </div>
                         <div class="form-input-endereco">
