feat: Adress bar color (mobile)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel='stylesheet' href='estilo-media-query.css' type='text/css' />
         <link rel='stylesheet' href='estilo.css' type='text/css' />
         <link rel='stylesheet' href='snack.css' type='text/css' />
+        <meta name="theme-color" content="#e9bdab" />
         <title>Revenda Facrisa | Atacado de semijoias finas</title>
     </head>
 
@@ -55,7 +56,7 @@
                             <input type="tel" id="TELEFONE_MOBILE" placeholder="TELEFONE" />
                         </div>
                         <div class="form-input-field">
-                            <input type="number" id="CEP_MOBILE" placeholder="CEP" onfocusout="buscaCep(true)"
+                            <input type="number" id="CEP_MOBILE" placeholder="CEP" touchleave="buscaCep(true)"
                                 onblur="buscaCep(true)" />
                         </div>
                         <div class="form-input-endereco">
