--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
                             <input type="tel" id="TELEFONE_MOBILE" placeholder="TELEFONE" />
                         </div>
                         <div class="form-input-field">
-                            <input type="number" id="CEP_MOBILE" placeholder="CEP" touchleave="buscaCep(true)"
+                            <input type="tel" id="CEP_MOBILE" placeholder="CEP" touchleave="buscaCep(true)"
                                 onblur="buscaCep(true)" />
                         </div>
-                        <div class="form-input-endereco">
+                        <div class="form-input-endereco_MOBILE">
                             <div class="form-input-field">
                                 <input type="text" id="ENDERECO_MOBILE" placeholder="ENDERECO" />
                             </div>
@@ -79,34 +79,34 @@
                                 <div class="select">
                                     <select id="ESTADO_MOBILE" name="ESTADO">
                                         <option disabled selected value hidden>UF</option>
-                                        <option value="AC">Acre</option>
-                                        <option value="AL">Alagoas</option>
-                                        <option value="AP">Amapá</option>
-                                        <option value="AM">Amazonas</option>
-                                        <option value="BA">Bahia</option>
-                                        <option value="CE">Ceará</option>
-                                        <option value="DF">Distrito Federal</option>
-                                        <option value="ES">Espírito Santo</option>
-                                        <option value="GO">Goiás</option>
-                                        <option value="MA">Maranhão</option>
-                                        <option value="MT">Mato Grosso</option>
-                                        <option value="MS">Mato Grosso do Sul</option>
-                                        <option value="MG">Minas Gerais</option>
-                                        <option value="PA">Pará</option>
-                                        <option value="PB">Paraíba</option>
-                                        <option value="PR">Paraná</option>
-                                        <option value="PE">Pernambuco</option>
-                                        <option value="PI">Piauí</option>
-                                        <option value="RJ">Rio de Janeiro</option>
-                                        <option value="RN">Rio Grande do Norte</option>
-                                        <option value="RS">Rio Grande do Sul</option>
-                                        <option value="RO">Rondônia</option>
-                                        <option value="RR">Roraima</option>
-                                        <option value="SC">Santa Catarina</option>
-                                        <option value="SP">São Paulo</option>
-                                        <option value="SE">Sergipe</option>
-                                        <option value="TO">Tocantins</option>
-                                        <option value="EX">Estrangeiro</option>
+                                        <option value="AC">ACRE</option>
+                                        <option value="AL">ALAGOAS</option>
+                                        <option value="AP">AMAPÁ</option>
+                                        <option value="AM">AMAZONAS</option>
+                                        <option value="BA">BAHIA</option>
+                                        <option value="CE">CEARÁ</option>
+                                        <option value="DF">DISTRITO FEDERAL</option>
+                                        <option value="ES">ESPÍRITO SANTO</option>
+                                        <option value="GO">GOIÁS</option>
+                                        <option value="MA">MARANHÃO</option>
+                                        <option value="MT">MATO GROSSO</option>
+                                        <option value="MS">MATO GROSSO DO SUL</option>
+                                        <option value="MG">MINAS GERAIS</option>
+                                        <option value="PA">PARÁ</option>
+                                        <option value="PB">PARAÍBA</option>
+                                        <option value="PR">PARANÁ</option>
+                                        <option value="PE">PERNAMBUCO</option>
+                                        <option value="PI">PIAUÍ</option>
+                                        <option value="RJ">RIO DE JANEIRO</option>
+                                        <option value="RN">RIO GRANDE DO NORTE</option>
+                                        <option value="RS">RIO GRANDE DO SUL</option>
+                                        <option value="RO">RONDÔNIA</option>
+                                        <option value="RR">RORAIMA</option>
+                                        <option value="SC">SANTA CATARINA</option>
+                                        <option value="SP">SÃO PAULO</option>
+                                        <option value="SE">SERGIPE</option>
+                                        <option value="TO">TOCANTINS</option>
+                                        <option value="EX">ESTRANGEIRO</option>
                                     </select>
                                     <span class="focus"></span>
                                 </div>
@@ -165,34 +165,34 @@
                                 <div class="select">
                                     <select id="ESTADO" name="ESTADO">
                                         <option disabled selected value hidden>UF</option>
-                                        <option value="AC">Acre</option>
-                                        <option value="AL">Alagoas</option>
-                                        <option value="AP">Amapá</option>
-                                        <option value="AM">Amazonas</option>
-                                        <option value="BA">Bahia</option>
-                                        <option value="CE">Ceará</option>
-                                        <option value="DF">Distrito Federal</option>
-                                        <option value="ES">Espírito Santo</option>
-                                        <option value="GO">Goiás</option>
-                                        <option value="MA">Maranhão</option>
-                                        <option value="MT">Mato Grosso</option>
-                                        <option value="MS">Mato Grosso do Sul</option>
-                                        <option value="MG">Minas Gerais</option>
-                                        <option value="PA">Pará</option>
-                                        <option value="PB">Paraíba</option>
-                                        <option value="PR">Paraná</option>
-                                        <option value="PE">Pernambuco</option>
-                                        <option value="PI">Piauí</option>
-                                        <option value="RJ">Rio de Janeiro</option>
-                                        <option value="RN">Rio Grande do Norte</option>
-                                        <option value="RS">Rio Grande do Sul</option>
-                                        <option value="RO">Rondônia</option>
-                                        <option value="RR">Roraima</option>
-                                        <option value="SC">Santa Catarina</option>
-                                        <option value="SP">São Paulo</option>
-                                        <option value="SE">Sergipe</option>
-                                        <option value="TO">Tocantins</option>
-                                        <option value="EX">Estrangeiro</option>
+                                        <option value="AC">ACRE</option>
+                                        <option value="AL">ALAGOAS</option>
+                                        <option value="AP">AMAPÁ</option>
+                                        <option value="AM">AMAZONAS</option>
+                                        <option value="BA">BAHIA</option>
+                                        <option value="CE">CEARÁ</option>
+                                        <option value="DF">DISTRITO FEDERAL</option>
+                                        <option value="ES">ESPÍRITO SANTO</option>
+                                        <option value="GO">GOIÁS</option>
+                                        <option value="MA">MARANHÃO</option>
+                                        <option value="MT">MATO GROSSO</option>
+                                        <option value="MS">MATO GROSSO DO SUL</option>
+                                        <option value="MG">MINAS GERAIS</option>
+                                        <option value="PA">PARÁ</option>
+                                        <option value="PB">PARAÍBA</option>
+                                        <option value="PR">PARANÁ</option>
+                                        <option value="PE">PERNAMBUCO</option>
+                                        <option value="PI">PIAUÍ</option>
+                                        <option value="RJ">RIO DE JANEIRO</option>
+                                        <option value="RN">RIO GRANDE DO NORTE</option>
+                                        <option value="RS">RIO GRANDE DO SUL</option>
+                                        <option value="RO">RONDÔNIA</option>
+                                        <option value="RR">RORAIMA</option>
+                                        <option value="SC">SANTA CATARINA</option>
+                                        <option value="SP">SÃO PAULO</option>
+                                        <option value="SE">SERGIPE</option>
+                                        <option value="TO">TOCANTINS</option>
+                                        <option value="EX">ESTRANGEIRO</option>
                                     </select>
                                     <span class="focus"></span>
                                 </div>
