--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <head>
         <meta charset="UTF-8">
+        <title>Revenda Facrisa | Atacado de semijoias finas</title>
+        <link rel="icon" type="image/x-icon" href="img/ico/diamond.ico">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300,500,800" rel="stylesheet">
@@ -10,7 +12,6 @@
         <link rel='stylesheet' href='estilo.css' type='text/css' />
         <link rel='stylesheet' href='estilo-media-query.css' type='text/css' />
         <meta name="theme-color" content="#e9bdab" />
-        <title>Revenda Facrisa | Atacado de semijoias finas</title>
     </head>
 
     <body>
