--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                             </div>
                         </div>
                         <div class="form-input-field">
-                            <input type="text" id="CNPJ_MOBILE" placeholder="CNPJ" />
+                            <input type="tel" id="CNPJ_MOBILE" placeholder="CNPJ" />
                         </div>
                         <div class="form-input-LGPD">
                             <input class="LGPD-checkbox" type="checkbox" id="LGPD" checked disabled />
@@ -258,6 +258,6 @@
     </body>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.2.0/vanilla-masker.min.js"></script>
-    <script type="text/javascript" src="function.js"></script>
+    <script type="text/javascript" src="function20221013.js"></script>
 
 </html>
