fix: form sending

--- a/index.html
+++ b/index.html
@@ -258,6 +258,6 @@
     </body>
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-masker/1.2.0/vanilla-masker.min.js"></script>
-    <script type="text/javascript" src="function20221013.js"></script>
+    <script type="text/javascript" src="function.js"></script>
 
 </html>
